--- a/MIT xPro assignment/style.css
+++ b/MIT xPro assignment/style.css
@@ -1,14 +1,22 @@
+body {
+    height: 100em;
+}
+
+html {
+    background-image: url(mefishing.jpg);
+    background-size: cover;
+}
 h1{
-    color:blue;
+    margin: 25px;
+    padding: 30px;
+    background-image: url(banner.jpg);
+    background-size: cover;
+
+}
+#websitetitle {
+    color:rgb(248, 245, 245);
     font-size: 4em;
     font-style: oblique;
-    padding:0px 0px 0px 60px;
     font-family: Arial, Helvetica, sans-serif;
-    border-bottom: dotted black 10px;
-}
-figure{
-    padding:0px 0px 0px 258px;
-}
-figcaption{
-    padding-left: 65px;
+    text-align: center;
 }
