--- a/style.css
+++ b/style.css
@@ -20,19 +20,19 @@ h1{
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
 }
-p.welcome {
+span.welcome {
     text-align: right;
     font-size: 200%;
     margin-right: 40px;
     margin-left: 800px;
 }
-p.stuff {
+span.stuff {
     text-align: right;
     font-size: 150%;
     margin-right: 40px;
     margin-left: 800px;
 }
-p.links {
+span.links {
     text-align: right;
     font-size: 150%;
     margin-right: 40px;
