--- a/style.css
+++ b/style.css
@@ -20,21 +20,31 @@ h1{
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
 }
-span.welcome {
+p.welcome {
     text-align: right;
+    font-family: fantasy;
     font-size: 200%;
     margin-right: 40px;
     margin-left: 800px;
 }
-span.stuff {
+p.stuff {
     text-align: right;
+    font-family: cursive;
     font-size: 150%;
     margin-right: 40px;
     margin-left: 800px;
 }
-span.links {
+p.links {
     text-align: right;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 150%;
     margin-right: 40px;
     margin-left: 800px;
+}
+footer{
+    position: absolute;
+    bottom: -50em;
+    color:white;
+    margin-left: 90px;
+
 }
