--- a/week4/style.css
+++ b/week4/style.css
@@ -1,6 +1,7 @@
 #scoreBoard {
     display: table;
     margin: auto;
+    margin-top: -20;
 }
 ul {
     list-style-type: none;
@@ -27,6 +28,7 @@ li div {
   border-radius: 10%;
   text-align: center;
   margin-left: -40px;
+  z-index: 4;
 }
 #points {
   font-size: 40px ;
