added transitions and borders

--- a/style.css
+++ b/style.css
@@ -2,6 +2,14 @@
     font-family: '1942';
     src: url('1942.ttf');
 }
+@keyframes rotate {
+    0% {
+      filter: hue-rotate(0deg);
+    }
+    100% {
+      filter: hue-rotate(360deg);
+    }
+}
 #background {
     position: absolute;
     margin-top: -10px;
@@ -33,51 +41,62 @@
     position: absolute;
     top: 25;
     z-index: 0;
+    transition: top .1s;
+
 }
 #file1 {
     position: absolute;
     top: 50;
     z-index: 1;
+    transition: top .1s;
 }
 #file2 {
     position: absolute;
     top: 75;
     z-index: 4;
+    transition: top .1s;
 }
 #file3 {
     position: absolute;
     top: 100;
     z-index: 6;
+    transition: top .1s;
 }
 #file4 {
     position: absolute;
     top: 125;
     z-index: 8;
+    transition: top .1s;
 }
 #file5 {
     position: absolute;
     top: 150;
     z-index: 10;
+    transition: top .1s;
 }
 #file6 {
     position: absolute;
     top: 175;
     z-index: 12;
+    transition: top .1s;
 }
 #file7 {
     position: absolute;
     top: 200;
     z-index: 14;
+    transition: top .1s;
 }
 #file8 {
     position: absolute;
     top: 225;
     z-index: 16;
+    transition: top .1s;
 }
 #file9 {
     position: absolute;
     top: 250;
     z-index: 18;
+    transition: top .1s;
 }
 #link0 {
     position: absolute;
@@ -91,8 +110,9 @@
     z-index: 3;
     font-family:'Modak';
     background-image: url(paper.jpg);
-    color: red;
-    text-shadow: 2px 2px 5px rgb(247, 152, 152), 0 0 5px white, 0 0 25px white;
+    color: black;
+    text-shadow: 2px 2px 5px rgb(172, 171, 171), 0 0 5px white, 0 0 25px white;
+    transition: .1s;
     
 }
 #link1 {
@@ -108,6 +128,7 @@
     background-image: url(paper.jpg);
     color: red;
     text-shadow: 2px 2px 5px rgb(247, 152, 152), 0 0 5px white, 0 0 25px white;
+    transition: .1s;
 }
 #link2 {
     position: absolute;
@@ -122,6 +143,7 @@
     background-image: url(paper.jpg);
     color: red;
     text-shadow: 2px 2px 5px rgb(247, 152, 152), 0 0 5px white, 0 0 25px white;
+    transition: .1s;
 }
 #link3 {
     position: absolute;
@@ -136,6 +158,7 @@
     background-image: url(paper.jpg);
     color: red;
     text-shadow: 2px 2px 5px rgb(247, 152, 152), 0 0 5px white, 0 0 25px white;
+    transition: .1s;
 }
 #link4 {
     position: absolute;
@@ -150,6 +173,7 @@
     background-image: url(paper.jpg);
     color: red;
     text-shadow: 2px 2px 5px rgb(247, 152, 152), 0 0 5px white, 0 0 25px white;
+    transition: .1s;
 }
 #link5 {
     position: absolute;
@@ -164,6 +188,7 @@
     background-image: url(paper.jpg);
     color: red;
     text-shadow: 2px 2px 5px rgb(247, 152, 152), 0 0 5px white, 0 0 25px white;
+    transition: .1s;
 }
 #link6 {
     position: absolute;
@@ -178,6 +203,7 @@
     background-image: url(paper.jpg);
     color: red;
     text-shadow: 2px 2px 5px rgb(247, 152, 152), 0 0 5px white, 0 0 25px white;
+    transition: .1s;
 }
 #link7 {
     position: absolute;
@@ -192,6 +218,7 @@
     background-image: url(paper.jpg);
     color: red;
     text-shadow: 2px 2px 5px rgb(247, 152, 152), 0 0 5px white, 0 0 25px white;
+    transition: .1s;
 }
 #link8 {
     position: absolute;
@@ -206,6 +233,7 @@
     font: 12px 'Press Start 2P';
     color: white;
     text-shadow: 0 0 2px white, 0 0 5px white, 0 0 25px white;
+    transition: .1s;
     line-height: 29px;
 }
 #link9 {
@@ -220,6 +248,7 @@
     font: bolder  25px 'Barrio';
     color: white;
     text-shadow: 0 0 2px black, 0 0 5px black, 0 0 20px black;
+    transition: .1s;
     z-index: 20;
 }
 #link10 {
@@ -229,20 +258,30 @@
     border-radius: 5px;
     text-align: center;
     background-color: none;
+    transition: .1s;
     z-index: 20;
     opacity: 0;
 }
 #iframeDiv {
     position: absolute;
-    left: 860;
+    left: 875;
     top: 18;
-    background-image: url(wallpaper.jpg);
-    background-size: contain;
-    padding: 15px;
+    background: center / contain repeat url(wallpaper.jpg);
+    animation: none;
+    height: 713px;
+    width: 580px;
+    border-radius: 5px;
+}
+#inner-Frame {
+    position: absolute;
+    left: 890;
+    top: 33;
+    background: none;
+    animation: none;
 }
 #newFrame {
     position: relative;
-    background-color: white;
+    background: white;
 }
 iframe {
     border: 1px solid whitesmoke;
