--- a/portfolio webpage/style.css
+++ b/portfolio webpage/style.css
@@ -163,6 +163,9 @@ body {
 }
 #link6 {
     z-index: 9;
+    font-size: 15px;
+    color: black;
+    text-shadow: 2px 2px limegreen;
     font-family: 'Butcherman';
 }
 #link7 {
