--- a/challenges/style.css
+++ b/challenges/style.css
@@ -1,8 +1,8 @@
 body {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: repeat(7, 1fr);
-    height: 97vh;
+    grid-template-rows: repeat(7, 75px);
+    height: 100vh;
 }
 .userInput {
     grid-column: 1 / 2;
@@ -11,7 +11,7 @@ body {
 .output {
     grid-column: 2 / 3;
     background-color:black;
-    font-size: 20px;
+    font-size: 18px;
     font-weight: bolder;
     text-align: center;
     text-shadow: -1px 1px 1px white, 1px -1px 1px white, -1px -1px 1px white, 1px 1px 1px white;
@@ -60,8 +60,7 @@ body {
 }
 .answer {
     position: relative;
-    top:10%;
     width:100%;
-    height: 65%;
+    height: 50px;
     background-color: white;
 }
