--- a/challenges/style.css
+++ b/challenges/style.css
@@ -16,6 +16,12 @@ body {
     text-align: center;
     text-shadow: -1px 1px 1px white, 1px -1px 1px white, -1px -1px 1px white, 1px 1px 1px white;
 }
+.input {
+    color: gray;
+}
+.input:focus {
+    color: black;
+}
 #opposite {
     grid-row: 1 / 2;
 }
