--- a/challenges/style.css
+++ b/challenges/style.css
@@ -15,26 +15,39 @@ body {
     grid-column: 1 / 2;
     color: white;
     font-family: 'chalk';
+    padding-left: 10px;
 }
 .output {
     grid-column: 2 / 3;
     font-size: 18px;
     font-weight: bolder;
     text-align: center;
-    text-shadow: -1px 1px 1px white, 1px -1px 1px white, -1px -1px 1px white, 1px 1px 1px white;
     font-family: 'chalk';
+    color: rgb(248, 248, 125);
+    
 }
 .input {
     color: gray;
+    background-color: black;
 }
 .input:focus {
-    color: black;
+    color: white;
 }
 #opposite {
     grid-row: 1 / 2;
 }
 #opposite-outer {
     grid-row: 1 / 2;
+}
+#opp-learn-btn,
+#like-learn-btn,
+#digital-learn-btn,
+#highlow-learn-btn,
+#myAtoi-learn-btn,
+#persist-learn-btn,
+#planeSeat-learn-btn{
+    padding: 2px 4px 0 2px;
+    transform: translateY(-10%)
 }
 #likes {
     grid-row: 2 / 3;
@@ -74,7 +87,9 @@ body {
 }
 .answer {
     position: relative;
-    width:100%;
+    width:50%;
     height: 65px;
+    left: 25%;
+    border-top:2px solid rgb(248, 248, 125)
 
 }
