--- a/challenges/style.css
+++ b/challenges/style.css
@@ -10,6 +10,7 @@ body {
     background-image: url('chalkboard.jpg');
     background-size: cover;
     background-repeat: no-repeat;
+    padding-top: 10px;
 }
 .userInput {
     grid-column: 1 / 2;
