--- a/style.css
+++ b/style.css
@@ -11,9 +11,10 @@
     display: grid;
     grid-template-columns: repeat(4,1fr);
     grid-template-rows:  repeat(8,1fr);
-    gap: 5px;
+    gap: 10px;
     height: 100vh;
-    background-color: black;
+    background-image: url('marble.jpg');
+    background-size: contain;
 
 }
 header {
@@ -46,6 +47,7 @@ header {
 }
 .div {
     border: 1px solid black;
+ 
 }
 #aside-left {
     grid-column: 1 / 2;
@@ -74,7 +76,7 @@ article {
 }
 .links {
     position: relative;
-    height: 25%;
+    height: 24%;
     margin-right: 5px;
 }
 footer {
@@ -91,6 +93,7 @@ footer {
 iframe {
     width: 100%;
     height: 100%;
+
 }
 #portfolioImg {
     font-family: '1942';
