--- a/portfolio webpage/style.css
+++ b/portfolio webpage/style.css
@@ -14,6 +14,14 @@
     font-family: 'data';
     src: url('data.ttf');
 }
+@keyframes rotateRed {
+    0% {
+        filter: hue-rotate(-10deg);
+    }
+    100% {
+        filter: hue-rotate(30deg);
+    }
+}
 @keyframes rotate {
     0% {
       filter: hue-rotate(0deg);
