--- a/portfolio webpage/style.css
+++ b/portfolio webpage/style.css
@@ -38,7 +38,7 @@
     width: device-width ;
   }
 body {
-    background-image: url('blackandwhite.png');
+    background-image: url('wood.jpg');
 }
 #header {
     position: absolute;
@@ -52,7 +52,7 @@ body {
     color: whitesmoke;
     text-shadow: 2px -2px 2px black, 0 0 20px gray, 0 0 5px grey;
     font-weight: bolder;
-    background: rgb(0,0,0,.8)
+    background: rgb(0,0,0,.5)
 }
 #navBarDiv {
     position: absolute;
@@ -60,7 +60,6 @@ body {
     font-family: 'typewriter';
     font-size: 15px;
     text-shadow: none;
-    background-color: black;
     width: 50%;
     z-index: 1;
 }
@@ -72,10 +71,10 @@ body {
 }
 #folders {
     position: absolute;
-    top: 55;
+    top: 10%;
     left: 90;
     width: 900;
-    height: 680;
+    height: 90%;
     overflow: hidden;
 }
 .files {
@@ -139,7 +138,7 @@ body {
     left: 80;
     width: 182;
     text-align: center;
-    border: 2px solid black;
+    border: 1px solid black;
     border-bottom: none;
     border-radius: 5px 5px 0 0;
     background-image: url(paper.jpg);
@@ -147,6 +146,7 @@ body {
     color: red;
     text-shadow: 2px 2px 5px rgb(247, 152, 152), 0 0 5px white, 0 0 25px white;
     line-height: 29px;
+    box-shadow: inset 0 0 3px black;
 }
 .extend {
     position: absolute;
